--- a/my-electron-app/index.html
+++ b/my-electron-app/index.html
@@ -5,21 +5,19 @@
     <meta charset=utf-8>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name=viewport content="width=device-width,initial-scale=1">
-    <link rel=icon href=/favicon.ico>
-    <title>KLineChart + Vue</title>
-    <link href=./css/app.b2724533.css rel=preload as=style>
-    <link href=./css/chunk-vendors.6d9621c5.css rel=preload as=style>
-    <link href=./js/app.c984053f.js rel=preload as=script>
-    <link href=./js/chunk-vendors.0ae0d139.js rel=preload as=script>
-    <link href=./css/chunk-vendors.6d9621c5.css rel=stylesheet>
-    <link href=./css/app.b2724533.css rel=stylesheet>
+    <link href='./css/app.eb5f8581.css' rel=preload as=style>
+    <link href='./css/chunk-vendors.720466ca.css' rel=preload as=style>
+    <link href='./js/app.380c83a4.js' rel=preload as=script>
+    <link href='./js/chunk-vendors.872d83d1.js' rel=preload as=script>
+    <link href='./css/chunk-vendors.720466ca.css' rel=stylesheet>
+    <link href='./css/app.eb5f8581.css' rel=stylesheet>
 </head>
 
 <body><noscript><strong>We're sorry but vue-sample doesn't work properly without JavaScript enabled. Please enable it to
             continue.</strong></noscript>
-    <div id=app></div>
-    <script src=./js/chunk-vendors.0ae0d139.js></script>
-    <script src=./js/app.c984053f.js></script>
+    <div id='app'></div>
+    <script src='./js/chunk-vendors.872d83d1.js'></script>
+    <script src='./js/app.380c83a4.js'></script>
 </body>
 
 </html>
